--- a/rating/kubernetes/deployment.yaml
+++ b/rating/kubernetes/deployment.yaml
@@ -19,6 +19,9 @@ spec:
           image: sapock/rating:v1
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              cpu: "200m"
           readinessProbe:
             httpGet:
               path: '/actuator/health'
