--- a/movie/kubernetes/deployment.yaml
+++ b/movie/kubernetes/deployment.yaml
@@ -16,9 +16,12 @@ spec:
     spec:
       containers:
         - name: movie
-          image: sapock/movie:latest
+          image: sapock/movie:v1
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              cpu: "200m"
           readinessProbe:
             httpGet:
               path: '/actuator/health'
