--- a/reservation/src/main/resources/application.yml
+++ b/reservation/src/main/resources/application.yml
@@ -76,7 +76,7 @@ spring:
 
 api:
   url:
-    payment: localhost:8080
-    screen: localhost:8080
+    payment: payment:8080
+    screen: screen:8080
 
 
