--- a/payment/kubernetes/deployment.yaml
+++ b/payment/kubernetes/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: payment
-          image: sapock/payment:v1
+          image: sapock/payment:latest
           ports:
             - containerPort: 8080
           resources:
