--- a/screen/kubernetes/deployment.yaml
+++ b/screen/kubernetes/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: screen
-          image: sapock/screen:v1
+          image: sapock/screen:latest
           ports:
             - containerPort: 8080
           resources:
